deployment setup, environment's properties setup, tests env setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
-### APP CONFIG
-app.test-db-load = true
-
-### DB CONFIG
-spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
-spring.datasource.username=postgres
-spring.datasource.password=123654789
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+### PROFILE
+spring.profiles.active=test
 
 ### DB SCHEMA
 spring.jpa.hibernate.ddl-auto=create-drop
 
-### DB DATA
+### APP INITIAL DATA
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath*:data.sql
+spring.datasource.data=classpath*:data-postgres.sql
+app.initial-db-load = true
+app.initialData.room.size.columns.max = 16
+app.initialData.room.size.columns.min = 8
+app.initialData.room.size.rows.max = 16
+app.initialData.room.size.rows.min = 10
 
 ### SECURITY CONFIG
 cinema.security.enable = false
