some corrections and ExceptionDecorator creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### PROFILE
-spring.profiles.active=test
+spring.profiles.active=dev
 
 ### DB SCHEMA
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -15,7 +15,6 @@ app.initialData.room.size.rows.min = 10
 
 ### SECURITY CONFIG
 cinema.security.enable = false
-management.security.enabled=false
 
 ### HIBERNATE LOGGING
 #logging.level.org.hibernate.SQL=DEBUG
